CSS styling Added, Post Review Fixed

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             </div>
             <ul class="navbar-menu">
                 <li class="navbar-item">
-                    <a href="home" class="navbar-link" id="home-page">Home</a>
+                    <a href="#home" class="navbar-link" id="home-page">Home</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="show-review" class="navbar-link" id="show-review">Show Review</a>
+                    <a href="#show-review" class="navbar-link" id="show-review">Show Review</a>
                 </li>
                 <li class="navbar-button">
-                    <a href="search" class="button" id="search-bar">Search</a>
+                    <a href="#search" class="button-nav" id="search-bar">Search</a>
                 </li>
             </ul>
         </div>
