--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="navbar-container">
             <!-- <img src="images/filmRoll.png" id="filmRoll"> -->
-            <a href="#home" id="title-logo">Movie Reviews</a>
+            <a href="#home" id="title-logo">Movie Reviews <img src="images/filmRoll.png" class="filmRoll"></img></a>
             <div class="navbar-toggle">
                 <span class="bar"></span>
                 <span class="bar"></span>
