Search Added & JSON Server

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
                 <li class="navbar-item">
                     <a href="#show-review" class="navbar-link" id="show-review">Show Review</a>
                 </li>
+                <li>
+                    <input id="searchInput" type="text" placeholder="movie title..."></input>
+                </li>
                 <li class="navbar-button">
-                    <a href="#search" class="button-nav" id="search-bar">Search</a>
+        
+                    <button type="submit" class="button-nav" id="search-bar" value="enter">Search</button>
                 </li>
             </ul>
         </div>
@@ -42,5 +46,6 @@
     </div> -->
     
     <script src="index.js"></script>
+    </script>
 </body>
 </html>
